@@ -2,6 +2,8 @@
 	* options.c: fixed short option handling for multiple short options 
 	  at once (-abcde)
 	* conf.c: removed support for the old configuration syntax
+	* list_window.[c.h]: added LW_HIDE_CURSOR_FLAG
+	* screen_help.c: hide cursor on the help screen
 	
 2004-07-09  Kalle Wallin <kaw@linux.se>
 	* ncmpc-0.11.0 released (r1820)
